<resources>
    <string name="app_name">RandomDataLogger</string>
    <string name="app_version">Version %1$s</string>

    <!-- Notifications -->
    <string name="notif_ticker">Logging Signal Strength</string>
    <string name="notif_title">Signal Strength Logging</string>
    <string name="notif_chan_id">notification_channel_app_graphrandomsperiodically</string>
    <string name="notif_chan_name">Signal Strength Logger</string>

    <!-- Preference Titles -->
    <string name="pref_log_header">Logging Preferences</string>

    <!-- Logging Preferences -->
    <string name="pref_key_log_enabled">logging_enabled</string>
    <string name="pref_key_log_freq">logging_interval</string>
    <string name="pref_key_threshold">threshold</string>
    <string name="pref_key_toggle_interval">toggle_interval</string>
    <string name="pref_key_use_real_data">use_real_data</string>

    <string name="pref_title_log_enable">Toggle logging status</string>
    <string name="pref_title_log_freq">Log frequency (0-600 seconds)</string>
    <string name="pref_title_threshold">Signal threshold (dBm)</string>
    <string name="pref_title_toggle_interval">Airplane mode toggle interval (seconds)</string>
    <string name="pref_title_use_real_data">Signal data source</string>

    <string name="pref_sum_log_enabled">Logging is on</string>
    <string name="pref_sum_log_disabled">Logging is off</string>
    <string name="pref_sum_log_freq">Enter a value between 0 and 600</string>
    <string name="pref_sum_threshold">Enter a value between -120 and -80</string>
    <string name="pref_sum_toggle_interval">Enter a value in seconds</string>
    <string name="pref_sum_use_real_data_enabled">Using real signal data</string>
    <string name="pref_sum_use_real_data_disabled">Using random signal data</string>

    <string name="pref_min_log_freq">0</string>
    <string name="pref_max_log_freq">600</string>
    <string name="pref_default_log_freq">1</string>
    <string name="pref_default_toggle_interval">15</string>

    <!-- Chart Data -->
    <integer name="max_chart_data_points">30</integer>
    <string name="intent_category_chart_data_available">com.example.randomdatalogger.ChartData</string>
    <string name="intent_category_signal_below_threshold">com.example.randomdatalogger.Threshold</string>
    <string name="extra_chart_data_list">chart_data_list</string>

    <!-- Settings Menu -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Buttons -->
    <string name="start_logging">Start Logging</string>
    <string name="stop_logging">Stop Logging</string>
    <string name="get_ip">Get IP address</string>

    <!-- Accessibility Service -->
    <string name="accessibility_service_label">Airplane Mode Toggler</string>
    <string name="accessibility_service_description">Goes to network settings and toggles airplane mode.</string>
    <string name="accessibility_service_id">com.example.randomdatalogger/.AccessibilityServiceToggleAirplaneMode</string>
    <string name="accessibility_redirect_message">This app requires the Airplane Mode Toggler accessibility service to be enabled. Redirect to accessibility settings?</string>
    <string name="ok">OK</string>


</resources>