<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMain"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp"
    android:layout_marginBottom="40dp"
    android:gravity="center_horizontal"
    android:animateLayoutChanges="true">


    <ToggleButton
        android:id="@+id/toggleButtonStartLogging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/start_logging"
        android:textOn="@string/stop_logging" />

    <com.github.mikephil.charting.charts.CombinedChart
        android:id="@+id/signalChart"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/lytStartLogging"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1" />

    <TextView
        android:id="@+id/textViewUseRealData"
        android:text=""
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/signalChart"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        />

    <TextView
        android:id="@+id/textViewToggleInterval"
        android:text=""
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textViewUseRealData"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        />

    <Button
        android:id="@+id/buttonGetIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_ip"
        app:layout_constraintTop_toBottomOf="@+id/textViewToggleInterval"/>

</LinearLayout>